--- a/post/ghost.bib
+++ b/post/ghost.bib
@@ -60,4 +60,68 @@
   organization = {Instituto Português de Qualidade},
   address = {Caparica, Portugal},
   year = {2009},
-} 
+}
+@misc{latex,
+author = {Donald E. Knuth, Leslie Lamport},
+title = {LaTeX - A document preparation system},
+howpublished = {\url{https://www.latex-project.org/}},
+organization = {LaTeX3 Project},
+note = {(Accessed on 11/13/2018)}
+}
+@Article{jupyter,
+  Author    = {P\'erez, Fernando and Granger, Brian E.},
+  Title     = {{IP}ython: a System for Interactive Scientific Computing},
+  Journal   = {Computing in Science and Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {21--29},
+  month     = may,
+  year      = 2007,
+  url       = "https://ipython.org",
+  ISSN      = "1521-9615",
+  doi       = {10.1109/MCSE.2007.53},
+  publisher = {IEEE Computer Society},
+}
+@misc{stanli,
+author = {Jürgen Hackl},
+title = {CTAN: /tex-archive/graphics/pgf/contrib/stanli},
+howpublished = {\url{https://ctan.org/tex-archive/graphics/pgf/contrib/stanli?lang=en}},
+year = {2016},
+note = {(Accessed on 11/13/2018)}
+}
+@manual{tikz,
+   author    = {Till Tantau},
+   title     = {The TikZ and PGF Packages},
+   subtitle  = {Manual for version 3.0.0},
+   url       = {http://sourceforge.net/projects/pgf/},
+   date      = {2013-12-20},
+}
+@article{sympy,
+ title = {SymPy: symbolic computing in Python},
+ author = {Meurer, Aaron and Smith, Christopher P. and Paprocki, Mateusz and \v{C}ert\'{i}k, Ond\v{r}ej and Kirpichev, Sergey B. and Rocklin, Matthew and Kumar, AMiT and Ivanov, Sergiu and Moore, Jason K. and Singh, Sartaj and Rathnayake, Thilina and Vig, Sean and Granger, Brian E. and Muller, Richard P. and Bonazzi, Francesco and Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and Curry, Matthew J. and Terrel, Andy R. and Rou\v{c}ka, \v{S}t\v{e}p\'{a}n and Saboo, Ashutosh and Fernando, Isuru and Kulal, Sumith and Cimrman, Robert and Scopatz, Anthony},
+ year = 2017,
+ month = jan,
+ keywords = {Python, Computer algebra system, Symbolics},
+ abstract = {
+            SymPy is an open source computer algebra system written in pure Python. It is built with a focus on extensibility and ease of use, through both interactive and programmatic applications. These characteristics have led SymPy to become a popular symbolic library for the scientific Python ecosystem. This paper presents the architecture of SymPy, a description of its features, and a discussion of select submodules. The supplementary material provide additional examples and further outline details of the architecture and features of SymPy.
+         },
+ volume = 3,
+ pages = {e103},
+ journal = {PeerJ Computer Science},
+ issn = {2376-5992},
+ url = {https://doi.org/10.7717/peerj-cs.103},
+ doi = {10.7717/peerj-cs.103}
+}
+@misc{anastruct,
+author = {Ritchie Vink},
+title = {Welcome to anaStruct’s documentation! — anaStruct 1.b3 documentation},
+howpublished = {\url{https://anastruct.readthedocs.io/en/latest/index.html}},
+note = {(Accessed on 11/13/2018)}
+}
+@Misc{numpy,
+  author =    {Travis E, Oliphant},
+  title =     {A guide to NumPy},
+  year =      {2006},
+  url = "http://www.scipy.org/",
+  note = {(Accessed on 11/13/2018)}
+}
