espectro resposta post

--- a/post/ghost.bib
+++ b/post/ghost.bib
@@ -125,3 +125,22 @@ note = {(Accessed on 11/13/2018)}
   url = "http://www.scipy.org/",
   note = {(Accessed on 11/13/2018)}
 }
+@Article{LGsismo,
+  author = {Luís Guerreiro},
+  title =  {Engenharia Sísmica de Pontes},
+  editor = {{Instituto Superior Técnico}},
+  howpublished = {\url{http://www.civil.ist.utl.pt/~luisg/textos/Ac%C3%A7%C3%A3o%20S%C3%ADsmica.pdf}},
+  note = {(Accessed on 03/28/2019)},
+  year = {2010},
+}
+@Article{veludo2019,
+  author = {João Veludo},
+  title =  {Resposta a Ações Sísmicas. Espectro de resposta},
+  editor = {{Escola Superior de Tecnologia e Gestão}},
+  year =   {2019}
+}
+@Article{EC8,
+  author = {{Instituto Português de Qualidade LNEC}},
+  title =  {Eurocódigo 8 – Projecto de estruturas para resistência aos sismos Parte 1: Regras gerais, acções sísmicas e regras para edifícios},
+  year =   {2010}
+}
