--- a/post/ghost.bib
+++ b/post/ghost.bib
@@ -144,3 +144,10 @@ note = {(Accessed on 11/13/2018)}
   title =  {Eurocódigo 8 – Projecto de estruturas para resistência aos sismos Parte 1: Regras gerais, acções sísmicas e regras para edifícios},
   year =   {2010}
 }
+@misc{ICC,
+  author = {{International Code Council}},
+  title = {2015 International Residential Code},
+  howpublished = {\url{https://codes.iccsafe.org/content/IRC2015/chapter-5-floors?site_type=public}},
+  year = {2015},
+  note = {(Accessed on 07/15/2019)}
+}
