--- a/post/ghost.bib
+++ b/post/ghost.bib
@@ -151,3 +151,11 @@ note = {(Accessed on 11/13/2018)}
   year = {2015},
   note = {(Accessed on 07/15/2019)}
 }
+@Book{aaceMorris,
+  title = {Skills and Knowledge of Cost Engineering},
+  author = {Morris E. Fleishman},
+  organization = {AACE International},
+  address = {Morgantown, WV, USA},
+  year = {2010},
+  url = {https://web.aacei.org/},
+}
